<resources>
    <string name="app_name">Elephant</string>
    <string name="btn_register">Register account</string>
    <string name="btn_signIn">Sign In</string>
    <string name="btn_login">Login</string>
    <string name="input_email">Enter your email</string>
    <string name="input_password">Enter your password</string>

    <string name="toast_loginYeah">Login Successful!</string>
    <string name="toast_loginBoo">Wrong email or password!</string>

    <string name="txt_email">Email</string>
    <string name="btn_next">Next</string>
    <string name="toast_emailUsed">This email is already registered.</string>
    <string name="toast_passwordLen">Your password is too short! It must be more than 7 characters.</string>

    <string name="nickname">Nickname</string>
    <string name="toast_image">Choose an image</string>

    <string name="toast_testing">BOXXXXXXXXX</string>

    <string name="user_code">XXXX</string>
    <string name="reminder_code">Please save this code. Your family will need this to join your Circle.</string>
    <string name="register_final">Register</string>
    <string name="register_success">Your elephant has been created!</string>
    <string name="register_failure">Oh no! Your elephant could not be created!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="permission">Permissions enabled</string>
    <string name="title_activity_navigation">Map</string>
    <string name="title_activity_location_main">LocationMainActivity</string>
    <string name="no_location">Unable to get your location</string>
    <string name="email_verify">Please check your email for verification</string>
    <string name="email_verify_fail">Verification email could not be sent</string>
    <string name="email_not_verified">You have not verified your email.
         Please check your email and follow the Verification Email sent by Elephant Family GPS</string>

    <string name="enter_code">Please enter unique code to join the herd!</string>
    <string name="code_missing">Code does not exist! Please double-check to see if you have entered the correct code.</string>
    <string name="join_herd_success">Congrats! You have become a member of his/her Herd.</string>
    <string name="join_herd_fail">Oh no! Unable to join his/her Herd.</string>
    <string name="selected_member">Please wait while we locate your herd member!</string>

</resources>
