<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">


    <EditText
        android:id="@+id/input_emailRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="99dp"
        android:textSize="20dp"
        android:ems="10"
        android:hint="@string/input_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/passwordRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:textSize="20dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/input_password"/>

    <Button
        android:id="@+id/btn_nextRegister"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="14dp"
        android:onClick="goToNameActivity"
        android:text="@string/btn_next"
        android:textSize="20dp"/>

</RelativeLayout>