<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InviteActivity">

    <TextView
        android:id="@+id/userCode"
        android:textSize="30dp"
        android:hint="@string/user_code"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="117dp" />

    <TextView
        android:id="@+id/codeReminder"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="187dp"
        android:gravity="center_horizontal"
        android:hint="@string/reminder_code"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/registerFinal"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="14dp"
        android:text="@string/register_final"
        android:textSize="20dp"
        android:onClick="registerNewUser"/>

</RelativeLayout>